manifests/kube-applier/base/kube-applier.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kube-applier
  labels:
    app: kube-applier
    kubernetes.io/ingress.class: private-example-base
  annotations:
    external-dns.alpha.kubernetes.io/target: example-base.com
spec:
  rules:
  - host: example-base.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-applier
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: /__/metrics
    prometheus.io/port: '8080'
  name: kube-applier
  labels:
    app: kube-applier
spec:
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: kube-applier
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-applier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-applier
  template:
    metadata:
      labels:
        app: kube-applier
    spec:
      serviceAccountName: kube-applier
      securityContext:
        fsGroup: 65533 # to make SSH key readable
      containers:
      - name: kube-applier
        image: quay.io/utilitywarehouse/kube-applier:2.2.9
        volumeMounts:
        - name: git-repo
          mountPath: /src
          readOnly: true
        resources:
          requests:
            cpu: 10m
            memory: 25Mi
          limits:
            cpu: 500m
            memory: 200Mi
        ports:
        - containerPort: 8080
      - name: git-sync
        image: k8s.gcr.io/git-sync:v3.1.1
        securityContext:
          runAsUser: 65533 # git-sync user
        volumeMounts:
        - name: git-repo
          mountPath: /tmp/git
        - name: git-secret
          mountPath: /etc/git-secret
        - name: strongbox-secret
          mountPath: /tmp/.strongbox_keyring
          subPath: .strongbox_keyring
        - name: gs-sb-bin
          mountPath: /usr/local/bin/strongbox
          subPath: strongbox
        - name: gs-gitconfig
          mountPath: /tmp/.gitconfig
          subPath: .gitconfig
        resources:
          requests:
            cpu: 10m
            memory: 25Mi
          limits:
            cpu: 500m
            memory: 300Mi
      volumes:
      - name: gs-sb-bin
        emptyDir: {}
      - name: gs-gitconfig
        emptyDir: {}
      - name: git-repo
        emptyDir: {}
      - name: git-secret
        secret:
          secretName: github-secret-ssh
          defaultMode: 288 # = mode 0440
      - name: strongbox-secret
        secret:
          secretName: strongbox-secret-keys
          defaultMode: 0400
